infer/tests/codetoanalyze/cpp/errors/reference/reference_field.cpp
../../frontend/reference/reference_field.cpp